--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <button id="post">POST</button>
     
 
-    <script>
+    <!-- <script>
         function get (){};
         function post (){;
             const newWine = {
@@ -37,6 +37,6 @@
 	})
 	  .then((e) => e.json())
 	  .then((e) => console.log(e));
-    </script>
+    </script> -->
 </body>
 </html>
